namespace Telemetry.Api.Configuration
{
    public class TelemetryOptions
    {
        public List<string> TelemetryIdentifiers { get; set; } = new();
    }
}