@startuml
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "Backend" {
  class TelemetryGeneratorWorker <<BackgroundService>>
  class TelemetryDispatchWorker <<BackgroundService>>
  class TelemetryController <<Controller>>
  class TelemetryRepository <<repository>>
  class TelemetryHub <<Hub>>
}

package "Contracts" {
  class TelemetrySample
  class TelemetryHistoryCursorDto
  class TelemetryHistoryPageDto
  class TelemetryOptions
  enum HistoryDirection
}

TelemetryGeneratorWorker --> TelemetryDispatchWorker : Channel<TelemetrySample>
TelemetryDispatchWorker --> TelemetryHub : telemetrySample()
TelemetryDispatchWorker --> TelemetryRepository : insert batch
TelemetryController --> TelemetryRepository : read history page
TelemetryRepository --> TelemetryHistoryPageDto
TelemetryHistoryPageDto o-- TelemetryHistoryCursorDto
TelemetryHistoryPageDto "1" o-- "*" TelemetrySample : items
TelemetryGeneratorWorker --> TelemetryOptions : configured telemetryIds
TelemetryHistoryCursorDto --> HistoryDirection
@enduml
